# Projet-Maker-echiquier

DeveloppementCpp/: CMakeLists.txt  Characters_List.cpp  Characters_List.h  Chessboard.cpp  Chessboard.h  Context.h  Displayable.cpp  Displayable.h  EffectHandler.cpp  EffectHandler.h  Effect_List.cpp  Effect_List.h  GameSystem.cpp  GameSystem.h  Pieces.cpp  Pieces.h  Pieces_List.cpp  Pieces_List.h  main.cpp
DeveloppementCpp/PIECES/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
DeveloppementCpp/PIECES/BISHOP_CHARACTER/: Medusa_Saber.cpp  Medusa_Saber.h
DeveloppementCpp/PIECES/KING_CHARACTER/: Artoria.cpp  Artoria.h
DeveloppementCpp/PIECES/KNIGHT_CHARACTER/: Ushiwakamaru.cpp  Ushiwakamaru.h
DeveloppementCpp/PIECES/PAWN_CHARACTER/: Nemo_Marine.cpp  Nemo_Marine.h
DeveloppementCpp/PIECES/QUEEN_CHARACTER/: Sesshoin_Kiara.cpp  Sesshoin_Kiara.h
DeveloppementCpp/PIECES/ROOK_CHARACTER/: Arceuid.cpp  Arceuid.h
